server/.happypack/s--2094366279
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Blocks/Blocks.js: Unexpected token (77:12)

[0m [90m 75 | [39m                [90m// console.log(mapping[item]);[39m
 [90m 76 | [39m
[31m[1m>[22m[39m[90m 77 | [39m            [36melse[39m
 [90m    | [39m            [31m[1m^[22m[39m
 [90m 78 | [39m                temp [33m=[39m mapping[item][33m;[39m
 [90m 79 | [39m            [36mif[39m ([36mthis[39m[33m.[39mprops[33m.[39mblocks[33m.[39mselectedBlock [33m===[39m item)
 [90m 80 | [39m                temp [33m+=[39m [32m' selected'[39m[33m;[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Blocks/Blocks.js: Unexpected token (77:12)

[0m [90m 75 | [39m                [90m// console.log(mapping[item]);[39m
 [90m 76 | [39m
[31m[1m>[22m[39m[90m 77 | [39m            [36melse[39m
 [90m    | [39m            [31m[1m^[22m[39m
 [90m 78 | [39m                temp [33m=[39m mapping[item][33m;[39m
 [90m 79 | [39m            [36mif[39m ([36mthis[39m[33m.[39mprops[33m.[39mblocks[33m.[39mselectedBlock [33m===[39m item)
 [90m 80 | [39m                temp [33m+=[39m [32m' selected'[39m[33m;[39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)